--- a/src/index.css
+++ b/src/index.css
@@ -362,10 +362,10 @@ img {
 
 @media screen and (max-width: 768px) {
   /* disable scroll for mobile */
-  html {
-    /* overflow: hidden !important; */
-    /* overscroll-behavior: none !important; */
-  }
+  /* html {  */
+  /* overflow: hidden !important; */
+  /* overscroll-behavior: none !important; */
+  /* } */
 
   input,
   select,
